testdata/scenarios/02_8-single-policy/k8s/rate-limit-ektp.yaml
apiVersion: enterprisekgateway.solo.io/v1alpha1
kind: EnterpriseKgatewayTrafficPolicy
metadata:
  name: rate-limit
  namespace: kgateway-system
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: api-example-com
  entRateLimit:
    global:
      rateLimitConfigRefs:
        - name: ratelimit
          namespace: kgateway-system
